# gethellybot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_AUDIT.md  DEPLOYMENT.md  DOUBLE_REPLY_SOURCES.md  Dockerfile  Makefile  README.md  README_SMOKE_TESTS.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
apps/: __init__.py
docs/: HELLY_V1_AGENT_INTENT_OWNERSHIP_MATRIX.md  HELLY_V1_AGENT_KNOWLEDGE_BASE.md  HELLY_V1_AGENT_OWNED_STAGE_ARCHITECTURE.md  HELLY_V1_AGENT_OWNED_STAGE_REBUILD_PLAN.md  HELLY_V1_AGENT_OWNERSHIP_COMPLETION_PLAN.md  HELLY_V1_ARCHITECTURE_BLUEPRINT.md  HELLY_V1_CONVERSATION_POLISH_TASK_LIST.md  HELLY_V1_CONVERSATION_QUALITY_PLAN.md  HELLY_V1_CONVERSATION_REVIEW_FINDINGS.md  HELLY_V1_DATA_MODEL_AND_ERD.md  HELLY_V1_DIRECT_CONTACT_MATCHING_FLOW.md  HELLY_V1_ENGINEERING_BACKLOG.md  HELLY_V1_ENTRY_AND_VACANCY_REDESIGN_TASK_LIST.md  HELLY_V1_FINAL_STRETCH_TASKS.md  HELLY_V1_IMPLEMENTATION_PLAN.md  HELLY_V1_IMPLEMENTATION_STATUS.md  HELLY_V1_INFRA_DECISIONS.md  HELLY_V1_LANGGRAPH_MIGRATION_PLAN.md  HELLY_V1_LANGGRAPH_STAGE_AGENT_ARCHITECTURE.md  HELLY_V1_LIVE_SMOKE_RUNBOOK.md  HELLY_V1_LLM_COVERAGE.md  HELLY_V1_MASTER_TASK_LIST.md  HELLY_V1_PROJECT_ARCHITECTURE.md  HELLY_V1_PROMPT_CATALOG.md  HELLY_V1_RAILWAY_DEPLOYMENT.md  HELLY_V1_REFERENCE_RESEARCH.md  HELLY_V1_RELEASE_CANDIDATE_CLOSEOUT.md  HELLY_V1_SRS.md  HELLY_V1_STATE_AWARE_CONVERSATION_MODEL.md  HELLY_V1_STATE_AWARE_EXECUTION_PLAN.md  HELLY_V1_STATE_MACHINES.md  HELLY_V1_SYNTHETIC_PHASE_L_RESULTS.md  README.md  USER_FLOW.md  (+15 more)
(+792 files in other folders)
